# GameEngine

./: .gitignore  CMakeLists.txt  COMPONENT_SYSTEM.md  ComponentTemplate.txt  README.md
GameProject/Meshes/: Circle.mesh  Cube.mesh  Pyramid.mesh
include/: Camera.h  Component.h  GameObject.h  Grid.h  LightComponent.h  MathUtils.h  Mesh.h  MeshRendererComponent.h  Meshes.h  Shader.h  TransformComponent.h  glm_ortho.h  glm_perspective.h
include/components/: Component.h  LightComponent.h  MaterialComponent.h  MeshRendererComponent.h  TransformComponent.h
shaders/: fragment.glsl  vertex.glsl
shaders/lit/: fragment_lit.glsl
src/: Application.cpp  Application.h  Camera.cpp  GameObject.cpp  Grid.cpp  LightComponent.cpp  Mesh.cpp  ProjectStructure.h  Scene.cpp  Scene.h  Shader.cpp  main.cpp
src/components/: LightComponent.cpp  MaterialComponent.cpp  MeshRendererComponent.cpp  TransformComponent.cpp
src/meshes/: Meshes.h
src/ui/: InspectorPanel.cpp  InspectorPanel.h  ProjectPanel.cpp  ProjectPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ViewportPanel.cpp  ViewportPanel.h
